--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,52 +28,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0  feras          4162   24  Married  Female              870.98   \n",
-      "1   Rami         34361   50  Married  Female             5685.48   \n",
-      "2   Amal          2084   22   Single  Female              323.70   \n",
-      "3   Nada          4288   18  Married  Female              156.89   \n",
-      "4   Saud          7192   22  Married  Female              370.77   \n",
+      "      Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
+      "0  Fatimah          1241   60   Single    Male              138.19   \n",
+      "1   Salman          1881   60   Single  Female              336.72   \n",
+      "2   bander          7158   51  Married    Male              172.66   \n",
+      "3     Naif          2949   23  Married    Male              483.67   \n",
+      "4   faisal          3259   25  Married    Male              617.57   \n",
       "\n",
-      "   Elementary Expenses (SAR)     Goal  Number of Children Employment_Status  \\\n",
-      "0                    4660.09  Savings                   4           Student   \n",
-      "1                   12431.05  Savings                   4          Employed   \n",
-      "2                    1148.82  Savings                   0           Student   \n",
-      "3                   12621.10  Savings                   4           Student   \n",
-      "4                    7946.80  Savings                   5          Employed   \n",
+      "   Elementary Expenses (SAR)        Goal  Number of Children  \\\n",
+      "0                    3851.94  Investment                   0   \n",
+      "1                    4765.68  Investment                   0   \n",
+      "2                    7295.41  Investment                   0   \n",
+      "3                    5044.26  Investment                   1   \n",
+      "4                    4716.38  Investment                   5   \n",
       "\n",
-      "  Nationality Budgeting_Rule  \n",
-      "0       Saudi       50/30/20  \n",
-      "1       Saudi       50/30/20  \n",
-      "2       Saudi       70/20/10  \n",
-      "3       Saudi       50/30/20  \n",
-      "4       Saudi       50/30/20  \n",
+      "  Employment_Status Nationality Budgeting_Rule Financial_Comfortability  \\\n",
+      "0        Unemployed       Saudi       50/30/20                  ['yes']   \n",
+      "1        Unemployed       Saudi       50/30/20                   ['no']   \n",
+      "2          Employed       Saudi       50/30/20                  ['yes']   \n",
+      "3           Student       Saudi       50/30/20                   ['no']   \n",
+      "4           Student       Saudi       50/30/20                  ['yes']   \n",
+      "\n",
+      "  Goal_Progress  \n",
+      "0           yes  \n",
+      "1           yes  \n",
+      "2            no  \n",
+      "3           yes  \n",
+      "4           yes  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 523 entries, 0 to 522\n",
-      "Data columns (total 12 columns):\n",
+      "RangeIndex: 1176 entries, 0 to 1175\n",
+      "Data columns (total 14 columns):\n",
       " #   Column                     Non-Null Count  Dtype  \n",
       "---  ------                     --------------  -----  \n",
-      " 0   Name                       523 non-null    object \n",
-      " 1   Salary (SAR)               523 non-null    int64  \n",
-      " 2   Age                        523 non-null    int64  \n",
-      " 3   State                      523 non-null    object \n",
-      " 4   Sex                        523 non-null    object \n",
-      " 5   Monthly Debt (SAR)         523 non-null    float64\n",
-      " 6   Elementary Expenses (SAR)  523 non-null    float64\n",
-      " 7   Goal                       523 non-null    object \n",
-      " 8   Number of Children         523 non-null    int64  \n",
-      " 9   Employment_Status          523 non-null    object \n",
-      " 10  Nationality                523 non-null    object \n",
-      " 11  Budgeting_Rule             523 non-null    object \n",
-      "dtypes: float64(2), int64(3), object(7)\n",
-      "memory usage: 49.2+ KB\n",
+      " 0   Name                       1176 non-null   object \n",
+      " 1   Salary (SAR)               1176 non-null   int64  \n",
+      " 2   Age                        1176 non-null   int64  \n",
+      " 3   State                      1176 non-null   object \n",
+      " 4   Sex                        1176 non-null   object \n",
+      " 5   Monthly Debt (SAR)         1176 non-null   float64\n",
+      " 6   Elementary Expenses (SAR)  1176 non-null   float64\n",
+      " 7   Goal                       1176 non-null   object \n",
+      " 8   Number of Children         1176 non-null   int64  \n",
+      " 9   Employment_Status          1176 non-null   object \n",
+      " 10  Nationality                1176 non-null   object \n",
+      " 11  Budgeting_Rule             1176 non-null   object \n",
+      " 12  Financial_Comfortability   1176 non-null   object \n",
+      " 13  Goal_Progress              1176 non-null   object \n",
+      "dtypes: float64(2), int64(3), object(9)\n",
+      "memory usage: 128.8+ KB\n",
       "None\n",
       "Name                         0\n",
       "Salary (SAR)                 0\n",
@@ -87,6 +96,8 @@
       "Employment_Status            0\n",
       "Nationality                  0\n",
       "Budgeting_Rule               0\n",
+      "Financial_Comfortability     0\n",
+      "Goal_Progress                0\n",
       "dtype: int64\n"
      ]
     }
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,11 +146,16 @@
     "data = data[(data['age'] >= 18) & (data['age'] <= 100)]  # Age should be between 0 and 100\n",
     "data = data[data['salary_(sar)'] >= 0]  # Salary should not be negative\n",
     "\n",
-    "# Filter for Saudi individuals\n",
+    "# Filter irrlivant records \n",
     "data = data[data['nationality'].str.lower() == 'saudi']\n",
+    "data = data[data['financial_comfortability'].str.lower() == 'no']\n",
+    "data = data[data['goal_progress'].str.lower() == 'no']\n",
     "\n",
-    "# Drop the 'nationality' column\n",
+    "# Drop irrlivant column\n",
     "data = data.drop(columns=['nationality'])\n",
+    "data = data.drop(columns=['financial_comfortability'])\n",
+    "data = data.drop(columns=['goal_progress'])\n",
+    "\n",
     "\n"
    ]
   },
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,19 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Age Group Encoding:\n",
-      "18-24: 0\n",
-      "25-34: 1\n",
-      "35-44: 2\n",
-      "45-54: 3\n",
-      "55+: 4\n"
+      "Age Group Encoding:\n"
      ]
     }
    ],
@@ -238,9 +249,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary_(sar)</th>\n",
+       "      <th>monthly_debt_(sar)</th>\n",
+       "      <th>elementary_expenses_(sar)</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>age_group_encoded</th>\n",
+       "      <th>debt_to_income_ratio</th>\n",
+       "      <th>savings_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
+       "count           0.0                 0.0                        0.0   \n",
+       "mean            NaN                 NaN                        NaN   \n",
+       "std             NaN                 NaN                        NaN   \n",
+       "min             NaN                 NaN                        NaN   \n",
+       "25%             NaN                 NaN                        NaN   \n",
+       "50%             NaN                 NaN                        NaN   \n",
+       "75%             NaN                 NaN                        NaN   \n",
+       "max             NaN                 NaN                        NaN   \n",
+       "\n",
+       "       number_of_children  age_group_encoded  debt_to_income_ratio  \\\n",
+       "count                 0.0                0.0                   0.0   \n",
+       "mean                  NaN                NaN                   NaN   \n",
+       "std                   NaN                NaN                   NaN   \n",
+       "min                   NaN                NaN                   NaN   \n",
+       "25%                   NaN                NaN                   NaN   \n",
+       "50%                   NaN                NaN                   NaN   \n",
+       "75%                   NaN                NaN                   NaN   \n",
+       "max                   NaN                NaN                   NaN   \n",
+       "\n",
+       "       savings_ratio  \n",
+       "count            0.0  \n",
+       "mean             NaN  \n",
+       "std              NaN  \n",
+       "min              NaN  \n",
+       "25%              NaN  \n",
+       "50%              NaN  \n",
+       "75%              NaN  \n",
+       "max              NaN  "
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create new features\n",
     "data['debt_to_income_ratio'] = data['monthly_debt_(sar)'] / data['salary_(sar)']\n",
@@ -251,7 +414,9 @@
     "data['savings_ratio'] = data['savings_ratio'].replace([np.inf, -np.inf], np.nan).fillna(0)\n",
     "\n",
     "# Drop irrelevant columns\n",
-    "data = data.drop(columns=['name'])"
+    "data = data.drop(columns=['name'])\n",
+    "\n",
+    "data.describe()"
    ]
   },
   {
@@ -263,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
