--- a/data_genration.ipynb
+++ b/data_genration.ipynb
@@ -2,36 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0  feras          4162   24  Married  Female              870.98   \n",
-      "1   Rami         34361   50  Married  Female             5685.48   \n",
-      "2   Amal          2084   22   Single  Female              323.70   \n",
-      "3   Nada          4288   18  Married  Female              156.89   \n",
-      "4   Saud          7192   22  Married  Female              370.77   \n",
-      "\n",
-      "   Elementary Expenses (SAR)     Goal  Number of Children Employment_Status  \\\n",
-      "0                    4660.09  Savings                   4           Student   \n",
-      "1                   12431.05  Savings                   4          Employed   \n",
-      "2                    1148.82  Savings                   0           Student   \n",
-      "3                   12621.10  Savings                   4           Student   \n",
-      "4                    7946.80  Savings                   5          Employed   \n",
-      "\n",
-      "  Nationality Budgeting_Rule  \n",
-      "0       Saudi       50/30/20  \n",
-      "1       Saudi       50/30/20  \n",
-      "2       Saudi       70/20/10  \n",
-      "3       Saudi       50/30/20  \n",
-      "4       Saudi       50/30/20  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import random\n",
@@ -141,6 +114,13 @@
     "    \n",
     "    # Generate nationality\n",
     "    nationality = random.choices([\"Saudi\", \"Other\"], weights=[98, 2], k=1)[0]\n",
+    "\n",
+    "    # Generate Financial_Comfortability randomly\n",
+    "    financial_comfortability = random.choices([\"yes\", \"no\"], weights=[70, 30], k=1)\n",
+    "    \n",
+    "    # Generate Goal_Progress randomly\n",
+    "    goal_progress = random.choices([\"yes\", \"no\"], weights=[80, 20], k=1)[0]\n",
+    "    \n",
     "    \n",
     "    # Determine the best budgeting rule\n",
     "    budgeting_rule = select_budgeting_rule(goal, salary, monthly_debt, elementary_expenses)\n",
@@ -157,11 +137,13 @@
     "        \"Number of Children\": number_of_children,\n",
     "        \"Employment_Status\": employment_status,\n",
     "        \"Nationality\": nationality,\n",
-    "        \"Budgeting_Rule\": budgeting_rule\n",
+    "        \"Budgeting_Rule\": budgeting_rule,\n",
+    "        \"Financial_Comfortability\": financial_comfortability,\n",
+    "        \"Goal_Progress\": goal_progress\n",
     "    }\n",
     "\n",
     "# Generate 523 records\n",
-    "data = [generate_record() for _ in range(523)]\n",
+    "data = [generate_record() for _ in range(1176)]\n",
     "\n",
     "# Create a DataFrame\n",
     "df = pd.DataFrame(data)\n",
@@ -169,8 +151,7 @@
     "# Save to an Excel file\n",
     "df.to_excel(\"Survey_ICS487_Project.xlsx\", index=False)  # Save the dataset to an Excel file\n",
     "\n",
-    "# Print the first few rows of the dataset\n",
-    "print(df.head())"
+    "\n"
    ]
   }
  ],
