--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,38 +28,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0  Fatimah          1241   60   Single    Male              138.19   \n",
-      "1   Salman          1881   60   Single  Female              336.72   \n",
-      "2   bander          7158   51  Married    Male              172.66   \n",
-      "3     Naif          2949   23  Married    Male              483.67   \n",
-      "4   faisal          3259   25  Married    Male              617.57   \n",
+      "         Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
+      "0     Ibrahim          3341   30   Single  Female              824.26   \n",
+      "1  abdulmajid          2595   27  Married    Male              362.05   \n",
+      "2      Bander          2472   26  Married    Male              204.87   \n",
+      "3        sami          2841   57  Married    Male              464.94   \n",
+      "4       salem          2337   54   Single    Male              507.02   \n",
       "\n",
       "   Elementary Expenses (SAR)        Goal  Number of Children  \\\n",
-      "0                    3851.94  Investment                   0   \n",
-      "1                    4765.68  Investment                   0   \n",
-      "2                    7295.41  Investment                   0   \n",
-      "3                    5044.26  Investment                   1   \n",
-      "4                    4716.38  Investment                   5   \n",
+      "0                    2607.09  Investment                   0   \n",
+      "1                    4919.38     Savings                   5   \n",
+      "2                    4152.50     Savings                   3   \n",
+      "3                    5733.83     Savings                   0   \n",
+      "4                    4012.42  Investment                   0   \n",
       "\n",
       "  Employment_Status Nationality Budgeting_Rule Financial_Comfortability  \\\n",
-      "0        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "1        Unemployed       Saudi       50/30/20                   ['no']   \n",
-      "2          Employed       Saudi       50/30/20                  ['yes']   \n",
-      "3           Student       Saudi       50/30/20                   ['no']   \n",
-      "4           Student       Saudi       50/30/20                  ['yes']   \n",
+      "0           Student       Saudi       50/30/20                   ['no']   \n",
+      "1           Student       Saudi       50/30/20                  ['yes']   \n",
+      "2           Student       Saudi       50/30/20                  ['yes']   \n",
+      "3        Unemployed       Saudi       50/30/20                  ['yes']   \n",
+      "4        Unemployed       Saudi       50/30/20                  ['yes']   \n",
       "\n",
       "  Goal_Progress  \n",
       "0           yes  \n",
-      "1           yes  \n",
-      "2            no  \n",
+      "1            no  \n",
+      "2           yes  \n",
       "3           yes  \n",
       "4           yes  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
@@ -110,7 +110,7 @@
     "print(data.info())\n",
     "\n",
     "# Check for missing values\n",
-    "print(data.isnull().sum())"
+    "print(data.isnull().sum())\n"
    ]
   },
   {
@@ -122,13 +122,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 363,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
+      "1171   Yara         21726   36  Married  Female             1275.94   \n",
+      "1172  Malik           951   23   Single    Male              271.78   \n",
+      "1173   Saif         32399   49  Married    Male             2906.62   \n",
+      "1174  Malik          2966   49   Single  Female              304.50   \n",
+      "1175  fares          2622   48  Married    Male              165.59   \n",
+      "\n",
+      "      elementary_expenses_(sar)        goal  number_of_children  \\\n",
+      "1171                    7075.70  Investment                   0   \n",
+      "1172                    1753.42  Investment                   0   \n",
+      "1173                    7802.89  Investment                   2   \n",
+      "1174                    2421.45     Savings                   0   \n",
+      "1175                    9368.64     Savings                   5   \n",
+      "\n",
+      "     employment_status budgeting_rule  \n",
+      "1171          Employed       50/30/20  \n",
+      "1172           Student       50/30/20  \n",
+      "1173          Employed       60/20/20  \n",
+      "1174        Unemployed       70/20/10  \n",
+      "1175        Unemployed       50/30/20  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/yc/7vmb_7z55z3d92njbdlxxr3m0000gp/T/ipykernel_61078/1195411881.py:25: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  filtered_data = filtered_data[\n"
+     ]
+    }
+   ],
    "source": [
     "# Standardize column names\n",
     "data.columns = [col.strip().lower().replace(\" \", \"_\") for col in data.columns]\n",
-    "\n",
     "# Check for duplicates and remove them\n",
     "data = data.drop_duplicates()\n",
     "\n",
@@ -146,16 +180,21 @@
     "data = data[(data['age'] >= 18) & (data['age'] <= 100)]  # Age should be between 0 and 100\n",
     "data = data[data['salary_(sar)'] >= 0]  # Salary should not be negative\n",
     "\n",
-    "# Filter irrlivant records \n",
-    "data = data[data['nationality'].str.lower() == 'saudi']\n",
-    "data = data[data['financial_comfortability'].str.lower() == 'no']\n",
-    "data = data[data['goal_progress'].str.lower() == 'no']\n",
+    "# Filter out rows where the conditions are met\n",
+    "filtered_data = data[\n",
+    "    (data['nationality'].str.lower() == 'saudi') ]  # Keep only rows where nationality is 'saudi'\n",
+    "filtered_data = filtered_data[\n",
+    "    (filtered_data['financial_comfortability'].str.lower() != 'no') ]  # Exclude rows where financial_comfortability is 'no'\n",
+    "filtered_data = filtered_data[\n",
+    "    (data['goal_progress'].str.lower() != 'no')  # Exclude rows where goal_progress is 'no'\n",
+    "]\n",
     "\n",
-    "# Drop irrlivant column\n",
-    "data = data.drop(columns=['nationality'])\n",
-    "data = data.drop(columns=['financial_comfortability'])\n",
-    "data = data.drop(columns=['goal_progress'])\n",
+    "# Drop the irrelevant columns\n",
+    "filtered_data = filtered_data.drop(columns=['nationality', 'financial_comfortability', 'goal_progress'])\n",
     "\n",
+    "# Store the filtered data back if needed\n",
+    "data = filtered_data\n",
+    "print(data.tail())\n",
     "\n"
    ]
   },
@@ -168,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +237,7 @@
     "# Create a new column for age groups\n",
     "data['age_group'] = pd.cut(data['age'], bins=age_bins, labels=age_labels, right=True)\n",
     "\n",
-    "data = data.drop(columns=['age'])"
+    "data = data.drop(columns=['age'])\n"
    ]
   },
   {
@@ -210,14 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Age Group Encoding:\n"
+      "Age Group Encoding:\n",
+      "18-24: 0\n",
+      "25-34: 1\n",
+      "35-44: 2\n",
+      "45-54: 3\n",
+      "55+: 4\n"
      ]
     }
    ],
@@ -237,7 +281,7 @@
     "for label, encoded in zip(label_encoder.classes_, range(len(label_encoder.classes_))):\n",
     "    print(f\"{label}: {encoded}\")\n",
     "\n",
-    "data = data.drop(columns=['age_group'])"
+    "data = data.drop(columns=['age_group'])\n"
    ]
   },
   {
@@ -249,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -285,83 +329,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>717.000000</td>\n",
+       "      <td>717.000000</td>\n",
+       "      <td>717.000000</td>\n",
+       "      <td>717.000000</td>\n",
+       "      <td>717.000000</td>\n",
+       "      <td>717.000000</td>\n",
+       "      <td>717.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3776.023710</td>\n",
+       "      <td>490.994826</td>\n",
+       "      <td>5699.952720</td>\n",
+       "      <td>1.234310</td>\n",
+       "      <td>1.343096</td>\n",
+       "      <td>0.153535</td>\n",
+       "      <td>2.376135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3742.614289</td>\n",
+       "      <td>387.375079</td>\n",
+       "      <td>3650.813219</td>\n",
+       "      <td>1.706313</td>\n",
+       "      <td>1.256046</td>\n",
+       "      <td>0.080978</td>\n",
+       "      <td>2.135130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>910.000000</td>\n",
+       "      <td>50.990000</td>\n",
+       "      <td>467.220000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.007880</td>\n",
+       "      <td>0.027823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1817.000000</td>\n",
+       "      <td>209.130000</td>\n",
+       "      <td>2695.560000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.082876</td>\n",
+       "      <td>0.766568</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2541.000000</td>\n",
+       "      <td>388.330000</td>\n",
+       "      <td>4831.890000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.151888</td>\n",
+       "      <td>1.752422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3808.000000</td>\n",
+       "      <td>651.050000</td>\n",
+       "      <td>8662.680000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.221979</td>\n",
+       "      <td>3.272212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>22117.000000</td>\n",
+       "      <td>1853.370000</td>\n",
+       "      <td>14564.850000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.299759</td>\n",
+       "      <td>11.825868</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -369,37 +413,37 @@
       ],
       "text/plain": [
        "       salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
-       "count           0.0                 0.0                        0.0   \n",
-       "mean            NaN                 NaN                        NaN   \n",
-       "std             NaN                 NaN                        NaN   \n",
-       "min             NaN                 NaN                        NaN   \n",
-       "25%             NaN                 NaN                        NaN   \n",
-       "50%             NaN                 NaN                        NaN   \n",
-       "75%             NaN                 NaN                        NaN   \n",
-       "max             NaN                 NaN                        NaN   \n",
+       "count    717.000000          717.000000                 717.000000   \n",
+       "mean    3776.023710          490.994826                5699.952720   \n",
+       "std     3742.614289          387.375079                3650.813219   \n",
+       "min      910.000000           50.990000                 467.220000   \n",
+       "25%     1817.000000          209.130000                2695.560000   \n",
+       "50%     2541.000000          388.330000                4831.890000   \n",
+       "75%     3808.000000          651.050000                8662.680000   \n",
+       "max    22117.000000         1853.370000               14564.850000   \n",
        "\n",
        "       number_of_children  age_group_encoded  debt_to_income_ratio  \\\n",
-       "count                 0.0                0.0                   0.0   \n",
-       "mean                  NaN                NaN                   NaN   \n",
-       "std                   NaN                NaN                   NaN   \n",
-       "min                   NaN                NaN                   NaN   \n",
-       "25%                   NaN                NaN                   NaN   \n",
-       "50%                   NaN                NaN                   NaN   \n",
-       "75%                   NaN                NaN                   NaN   \n",
-       "max                   NaN                NaN                   NaN   \n",
+       "count          717.000000         717.000000            717.000000   \n",
+       "mean             1.234310           1.343096              0.153535   \n",
+       "std              1.706313           1.256046              0.080978   \n",
+       "min              0.000000           0.000000              0.007880   \n",
+       "25%              0.000000           0.000000              0.082876   \n",
+       "50%              0.000000           1.000000              0.151888   \n",
+       "75%              2.000000           2.000000              0.221979   \n",
+       "max              5.000000           4.000000              0.299759   \n",
        "\n",
        "       savings_ratio  \n",
-       "count            0.0  \n",
-       "mean             NaN  \n",
-       "std              NaN  \n",
-       "min              NaN  \n",
-       "25%              NaN  \n",
-       "50%              NaN  \n",
-       "75%              NaN  \n",
-       "max              NaN  "
+       "count     717.000000  \n",
+       "mean        2.376135  \n",
+       "std         2.135130  \n",
+       "min         0.027823  \n",
+       "25%         0.766568  \n",
+       "50%         1.752422  \n",
+       "75%         3.272212  \n",
+       "max        11.825868  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
