Updating model.html

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,40 +28,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0     Ibrahim          3341   30   Single  Female              824.26   \n",
-      "1  abdulmajid          2595   27  Married    Male              362.05   \n",
-      "2      Bander          2472   26  Married    Male              204.87   \n",
-      "3        sami          2841   57  Married    Male              464.94   \n",
-      "4       salem          2337   54   Single    Male              507.02   \n",
+      "     Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
+      "0  faisal          2447   27  Married  Female              509.27   \n",
+      "1    Yara          3093   18   Single  Female              826.77   \n",
+      "2   bader           978   49  Married    Male              222.84   \n",
+      "3   Rawan          1187   59   Single    Male              255.64   \n",
+      "4   turki         13014   25   Single  Female             3536.82   \n",
       "\n",
-      "   Elementary Expenses (SAR)        Goal  Number of Children  \\\n",
-      "0                    2607.09  Investment                   0   \n",
-      "1                    4919.38     Savings                   5   \n",
-      "2                    4152.50     Savings                   3   \n",
-      "3                    5733.83     Savings                   0   \n",
-      "4                    4012.42  Investment                   0   \n",
+      "   Elementary Expenses (SAR)     Goal  Number of Children Employment_Status  \\\n",
+      "0                   14121.45  Savings                   1           Student   \n",
+      "1                    3174.57  Savings                   0           Student   \n",
+      "2                    6393.58  Savings                   3        Unemployed   \n",
+      "3                    3451.12  Savings                   0        Unemployed   \n",
+      "4                     667.08  Savings                   0          Employed   \n",
       "\n",
-      "  Employment_Status Nationality Budgeting_Rule Financial_Comfortability  \\\n",
-      "0           Student       Saudi       50/30/20                   ['no']   \n",
-      "1           Student       Saudi       50/30/20                  ['yes']   \n",
-      "2           Student       Saudi       50/30/20                  ['yes']   \n",
-      "3        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "4        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "\n",
-      "  Goal_Progress  \n",
-      "0           yes  \n",
-      "1            no  \n",
-      "2           yes  \n",
-      "3           yes  \n",
-      "4           yes  \n",
+      "  Nationality Budgeting_Rule Financial_Comfortability Goal_Progress  \n",
+      "0       Saudi       50/30/20                  ['yes']            no  \n",
+      "1       Saudi       50/30/20                  ['yes']           yes  \n",
+      "2       Saudi       50/30/20                  ['yes']            no  \n",
+      "3       Saudi       50/30/20                  ['yes']            no  \n",
+      "4       Saudi       70/20/10                  ['yes']           yes  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1176 entries, 0 to 1175\n",
       "Data columns (total 14 columns):\n",
@@ -122,33 +115,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
-      "1171   Yara         21726   36  Married  Female             1275.94   \n",
-      "1172  Malik           951   23   Single    Male              271.78   \n",
-      "1173   Saif         32399   49  Married    Male             2906.62   \n",
-      "1174  Malik          2966   49   Single  Female              304.50   \n",
-      "1175  fares          2622   48  Married    Male              165.59   \n",
+      "          name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
+      "1170     tariq         28942   36  Married  Female             2034.19   \n",
+      "1171  Khadijah         15446   24   Single    Male             1457.07   \n",
+      "1173     osamh          3011   20   Single  Female              617.84   \n",
+      "1174  Khadijah         19058   20   Single    Male             5275.05   \n",
+      "1175    sultan         26038   58  Married    Male             6646.54   \n",
       "\n",
       "      elementary_expenses_(sar)        goal  number_of_children  \\\n",
-      "1171                    7075.70  Investment                   0   \n",
-      "1172                    1753.42  Investment                   0   \n",
-      "1173                    7802.89  Investment                   2   \n",
-      "1174                    2421.45     Savings                   0   \n",
-      "1175                    9368.64     Savings                   5   \n",
+      "1170                    6530.04  Investment                   1   \n",
+      "1171                     511.71  Investment                   0   \n",
+      "1173                    1427.96  Investment                   0   \n",
+      "1174                    3602.68     Savings                   0   \n",
+      "1175                   10331.68  Investment                   5   \n",
       "\n",
       "     employment_status budgeting_rule  \n",
+      "1170          Employed       50/30/20  \n",
       "1171          Employed       50/30/20  \n",
-      "1172           Student       50/30/20  \n",
-      "1173          Employed       60/20/20  \n",
-      "1174        Unemployed       70/20/10  \n",
-      "1175        Unemployed       50/30/20  \n"
+      "1173           Student       60/20/20  \n",
+      "1174          Employed       50/30/20  \n",
+      "1175          Employed       50/30/20  \n"
      ]
     },
     {
@@ -207,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -329,83 +322,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>717.000000</td>\n",
-       "      <td>717.000000</td>\n",
-       "      <td>717.000000</td>\n",
-       "      <td>717.000000</td>\n",
-       "      <td>717.000000</td>\n",
-       "      <td>717.000000</td>\n",
-       "      <td>717.000000</td>\n",
+       "      <td>745.000000</td>\n",
+       "      <td>745.000000</td>\n",
+       "      <td>745.000000</td>\n",
+       "      <td>745.000000</td>\n",
+       "      <td>745.000000</td>\n",
+       "      <td>745.000000</td>\n",
+       "      <td>745.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>3776.023710</td>\n",
-       "      <td>490.994826</td>\n",
-       "      <td>5699.952720</td>\n",
-       "      <td>1.234310</td>\n",
-       "      <td>1.343096</td>\n",
-       "      <td>0.153535</td>\n",
-       "      <td>2.376135</td>\n",
+       "      <td>4051.404027</td>\n",
+       "      <td>506.025584</td>\n",
+       "      <td>5525.033691</td>\n",
+       "      <td>1.194631</td>\n",
+       "      <td>1.326174</td>\n",
+       "      <td>0.151673</td>\n",
+       "      <td>2.274469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>3742.614289</td>\n",
-       "      <td>387.375079</td>\n",
-       "      <td>3650.813219</td>\n",
-       "      <td>1.706313</td>\n",
-       "      <td>1.256046</td>\n",
-       "      <td>0.080978</td>\n",
-       "      <td>2.135130</td>\n",
+       "      <td>3829.980334</td>\n",
+       "      <td>399.872256</td>\n",
+       "      <td>3555.717335</td>\n",
+       "      <td>1.714415</td>\n",
+       "      <td>1.281454</td>\n",
+       "      <td>0.082497</td>\n",
+       "      <td>2.247365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>910.000000</td>\n",
-       "      <td>50.990000</td>\n",
-       "      <td>467.220000</td>\n",
+       "      <td>904.000000</td>\n",
+       "      <td>50.100000</td>\n",
+       "      <td>467.560000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.007880</td>\n",
-       "      <td>0.027823</td>\n",
+       "      <td>0.003592</td>\n",
+       "      <td>0.033129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1817.000000</td>\n",
-       "      <td>209.130000</td>\n",
-       "      <td>2695.560000</td>\n",
+       "      <td>1791.000000</td>\n",
+       "      <td>213.470000</td>\n",
+       "      <td>2827.240000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.082876</td>\n",
-       "      <td>0.766568</td>\n",
+       "      <td>0.078473</td>\n",
+       "      <td>0.761463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2541.000000</td>\n",
-       "      <td>388.330000</td>\n",
-       "      <td>4831.890000</td>\n",
+       "      <td>2733.000000</td>\n",
+       "      <td>388.860000</td>\n",
+       "      <td>4663.130000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.151888</td>\n",
-       "      <td>1.752422</td>\n",
+       "      <td>0.149955</td>\n",
+       "      <td>1.597965</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>3808.000000</td>\n",
-       "      <td>651.050000</td>\n",
-       "      <td>8662.680000</td>\n",
+       "      <td>4427.000000</td>\n",
+       "      <td>679.020000</td>\n",
+       "      <td>7947.840000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>0.221979</td>\n",
-       "      <td>3.272212</td>\n",
+       "      <td>0.225090</td>\n",
+       "      <td>3.007356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>22117.000000</td>\n",
-       "      <td>1853.370000</td>\n",
-       "      <td>14564.850000</td>\n",
+       "      <td>20214.000000</td>\n",
+       "      <td>1887.210000</td>\n",
+       "      <td>14839.350000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>0.299759</td>\n",
-       "      <td>11.825868</td>\n",
+       "      <td>0.299707</td>\n",
+       "      <td>15.361976</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -413,37 +406,37 @@
       ],
       "text/plain": [
        "       salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
-       "count    717.000000          717.000000                 717.000000   \n",
-       "mean    3776.023710          490.994826                5699.952720   \n",
-       "std     3742.614289          387.375079                3650.813219   \n",
-       "min      910.000000           50.990000                 467.220000   \n",
-       "25%     1817.000000          209.130000                2695.560000   \n",
-       "50%     2541.000000          388.330000                4831.890000   \n",
-       "75%     3808.000000          651.050000                8662.680000   \n",
-       "max    22117.000000         1853.370000               14564.850000   \n",
+       "count    745.000000          745.000000                 745.000000   \n",
+       "mean    4051.404027          506.025584                5525.033691   \n",
+       "std     3829.980334          399.872256                3555.717335   \n",
+       "min      904.000000           50.100000                 467.560000   \n",
+       "25%     1791.000000          213.470000                2827.240000   \n",
+       "50%     2733.000000          388.860000                4663.130000   \n",
+       "75%     4427.000000          679.020000                7947.840000   \n",
+       "max    20214.000000         1887.210000               14839.350000   \n",
        "\n",
        "       number_of_children  age_group_encoded  debt_to_income_ratio  \\\n",
-       "count          717.000000         717.000000            717.000000   \n",
-       "mean             1.234310           1.343096              0.153535   \n",
-       "std              1.706313           1.256046              0.080978   \n",
-       "min              0.000000           0.000000              0.007880   \n",
-       "25%              0.000000           0.000000              0.082876   \n",
-       "50%              0.000000           1.000000              0.151888   \n",
-       "75%              2.000000           2.000000              0.221979   \n",
-       "max              5.000000           4.000000              0.299759   \n",
+       "count          745.000000         745.000000            745.000000   \n",
+       "mean             1.194631           1.326174              0.151673   \n",
+       "std              1.714415           1.281454              0.082497   \n",
+       "min              0.000000           0.000000              0.003592   \n",
+       "25%              0.000000           0.000000              0.078473   \n",
+       "50%              0.000000           1.000000              0.149955   \n",
+       "75%              2.000000           2.000000              0.225090   \n",
+       "max              5.000000           4.000000              0.299707   \n",
        "\n",
        "       savings_ratio  \n",
-       "count     717.000000  \n",
-       "mean        2.376135  \n",
-       "std         2.135130  \n",
-       "min         0.027823  \n",
-       "25%         0.766568  \n",
-       "50%         1.752422  \n",
-       "75%         3.272212  \n",
-       "max        11.825868  "
+       "count     745.000000  \n",
+       "mean        2.274469  \n",
+       "std         2.247365  \n",
+       "min         0.033129  \n",
+       "25%         0.761463  \n",
+       "50%         1.597965  \n",
+       "75%         3.007356  \n",
+       "max        15.361976  "
       ]
      },
-     "execution_count": 366,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
